# minni

./: .gitignore  README.md  build.gradle.kts  idea.md  settings.gradle.kts
.model/: README.md  framework_condition.md  metadata_template.md  progress.md
benchmarks/: README.md  run_benchmarks.sh
benchmarks/memory/: benchmark_flat_vs.cpp  benchmark_kg.cpp  benchmark_quantization.cpp
config/: README.md  build_profiles.json  device_tiers.json  model_registry.json
docs/: README.md
docs/api/: jni_bridge.md
docs/architecture/: high_level_design.md
docs/contributing/: style_guide.md
docs/guides/: adding_models.md  getting_started.md  security.md
examples/: README.md
examples/android_demo/: README.md  build.gradle.kts
examples/python_export/: README.md  export_logic_rules.py
models_capability/: README.md
models_capability/audio/: assessment_template.md
research/: README.md
scripts/: README.md
scripts/deploy/: push_model.sh
src/: README.md
src/core/: CMakeLists.txt  README.md
src/core/genai/: ModelRunner.cpp  ModelRunner.h
src/core/logic/: FlatVectorStore.cpp  FlatVectorStore.h  KnowledgeGraph.cpp  KnowledgeGraph.h  README.md  RuleEngine.cpp  RuleEngine.h  SatSolver.cpp  SatSolver.h  SolverInterface.h  VectorStore.cpp  VectorStore.h  implementation_plan.md
src/core/optimization/: Quantizer.cpp  Quantizer.h
src/core/platform/: MemoryMapper.cpp  MemoryMapper.h
src/core/security/: SecurityManager.cpp  SecurityManager.h
src/core/signal/: DSPKernel.cpp  DSPKernel.h  KalmanFilter.cpp  KalmanFilter.h  README.md  SignalProcessor.cpp  SignalProcessor.h  implementation_plan.md
testing/: README.md
tools/: README.md
(+132 files in other folders)
